samples/_failures_safe/1761454948_c220b6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d6697a24.c: In function ‘cleanup_log_collection’:
./samples/SAFE/__tmp_d6697a24.c:139:5: error: expected identifier at end of input
  139 |     if (collection && collection->
      |     ^~
./samples/SAFE/__tmp_d6697a24.c:139:5: error: expected declaration or statement at end of input
